# tweet-sentiment-extraction

./: .dvcignore  .gitignore  .pre-commit-config.yaml  Homeworks MLOps hse girafe-ai 25f.md  LICENSE  Makefile  README.md  config.yaml  docker-compose.yaml  dvc.yaml  get_data.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
sentiment_span_extractor/: convert.py  infer.py  infer_triton.py  test.py  train.py
sentiment_span_extractor/metrics/: jaccard.py
sentiment_span_extractor/models/: heads.py  span_module.py
sentiment_span_extractor/utils/: dvc_utils.py  logging.py  seed.py
tests/: test_jaccard.py
triton/models/sentiment_span_extractor/: config.pbtxt
